--- a/Python程式設計/pydm-20250511-ans.ipynb
+++ b/Python程式設計/pydm-20250511-ans.ipynb
@@ -612,6 +612,101 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc08d809-f32a-4ff2-b779-01335894a69b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for j in range(1, 10):\n",
+    "    for i in range(1, 10):\n",
+    "        if i > 1:\n",
+    "            print(f'{j} x {i} = {j*i:2}', end=' ')\n",
+    "        else:\n",
+    "            print(f'{j} x {i} = {j*i:1}', end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ae58249-2f61-4614-a895-c57a715f2294",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for j in range(1, 10):\n",
+    "    for i in range(1, 10):\n",
+    "        print(f'{j} x {i} = {j*i:2}' if i > 1 else f'{j} x {i} = {j*i:1}', end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88d4fbca-29ad-4e5b-9c10-73343a9fa402",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for j in range(1, 10):\n",
+    "    for i in range(1, 10):\n",
+    "        print(f'{j} x {i} = {j*i:{2 if i > 1 else 1}}', end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79a66985-7ce4-4da4-893f-5ddb9b5302f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if-else\n",
+    "i = 1\n",
+    "i = 9\n",
+    "\n",
+    "2 if i > 1 else 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6c339ea-d5c5-4181-8882-7e23b6005dc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and or\n",
+    "i = 1\n",
+    "i = 9\n",
+    "i > 1 and 2 or 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7f5d339-6210-4230-bf9e-37cd0911e5cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list subscription\n",
+    "i = 1\n",
+    "i = 9\n",
+    "[1,2][i > 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b317c3e4-d173-4047-95c4-d01e2678e69a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# arithmetic\n",
+    "i = 1\n",
+    "i = 9\n",
+    "(i > 1) + 1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0019636e-6aec-4515-a578-b9985aaf6a3a",
    "metadata": {},
@@ -636,6 +731,75 @@
     "<ol>\n",
     "    <li>實作 LeetCode > Top Interview Questions > Easy Collection > Others > Missing Number</li>\n",
     "</ol>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "820c7166-b8c6-42c1-b0b2-1c512860f0a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [3, 2, 1, 0, 5, 4]\n",
+    "\n",
+    "def test(nums):\n",
+    "    pool = set(range(len(nums)+1))\n",
+    "    for n in nums:\n",
+    "        pool.remove(n)\n",
+    "    return pool.pop()\n",
+    "\n",
+    "test(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5460399-3f92-4de7-b1c3-ca89d29cd164",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n in nums:\n",
+    "    pool.remove(n)\n",
+    "print(pool.pop())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "205221ce-208e-43c2-b1c3-b61c56f527fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(nums):\n",
+    "    pool = set(range(len(nums)+1))\n",
+    "    for n in nums:\n",
+    "        pool.remove(n)\n",
+    "    return pool.pop()\n",
+    "\n",
+    "def testv2(nums):\n",
+    "    flags = [False] * (len(nums)+1)\n",
+    "    for n in nums:\n",
+    "        flags[n] = True\n",
+    "    for i in range(len(flags)):\n",
+    "        if flags[i] == False:\n",
+    "            return i\n",
+    "testv2(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaed8da2-c2d0-4b0d-a64d-2950e423d980",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [0, 2, 3, 1, 4]\n",
+    "\n",
+    "def testv3(nums):\n",
+    "    wish = range(len(nums)+1)\n",
+    "    return sum(wish)-sum(nums)\n",
+    "    \n",
+    "testv3(nums)"
    ]
   },
   {
@@ -669,6 +833,265 @@
     "    <li><font color=\"green\">//</font></li>\n",
     "    <li><font color=\"green\">%</font></li>\n",
     "</tt></ol>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac2e175e-059f-479f-aebf-4da2f7b65269",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "board = [\n",
+    " ['5', '3', '.', '.', '7', '.', '.', '.', '.'],\n",
+    " ['6', '.', '.', '1', '9', '5', '.', '.', '.'],\n",
+    " ['.', '9', '8', '.', '.', '.', '.', '6', '.'],\n",
+    " ['8', '.', '.', '.', '6', '.', '.', '.', '3'],\n",
+    " ['4', '.', '.', '8', '.', '3', '.', '.', '1'],\n",
+    " ['7', '.', '.', '.', '2', '.', '.', '.', '6'],\n",
+    " ['.', '6', '.', '.', '.', '.', '2', '8', '.'],\n",
+    " ['.', '.', '.', '4', '1', '9', '.', '.', '5'],\n",
+    " ['.', '.', '.', '.', '8', '.', '.', '7', '9']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9d3f5b8-70b7-46ed-baf3-695da245d919",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "under_test = ['5', '3', '.', '.', '7', '7', '.', '.', '.']\n",
+    "under_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8c0e042-953a-489b-91a3-fdce83bf4308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pool = []\n",
+    "for n in under_test:\n",
+    "    #print(n)\n",
+    "    if n != '.':\n",
+    "        if n in pool:\n",
+    "            print('duplicate')\n",
+    "            break\n",
+    "        else:\n",
+    "            pool.append(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98858e25-df4c-44cd-83c2-5f2f2c5a0f26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "under_test = ['5', '3', '3', '.', '.', '7', '.', '.', '.']\n",
+    "under_test\n",
+    "\n",
+    "def check9(under_test):\n",
+    "    flags = [False] * 10\n",
+    "    for n in under_test:\n",
+    "        if n != '.':\n",
+    "            d = int(n)\n",
+    "            if flags[d]:\n",
+    "                return False\n",
+    "            else:\n",
+    "                flags[d] = True\n",
+    "    return True\n",
+    "\n",
+    "check9(under_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cb55802-b5ba-48aa-9d57-42c1b80ac2e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check row\n",
+    "for j in range(9):\n",
+    "    under_test = [board[j][i] for i in range(9)]\n",
+    "    print(under_test, check9(under_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7241cebd-13ba-451b-9f69-c32b0e962d34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check column\n",
+    "for j in range(9):\n",
+    "    under_test = [board[i][j] for i in range(9)]\n",
+    "    print(under_test, check9(under_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bd03355-6977-4fb7-8887-eda192170470",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#y\n",
+    "0, 1, 2, 0, 1, 2, 0, 1, 2 => 0*3+0, 0*3+1, 0*3+2, 0*3+0, 0*3+1, 0*3+2, 0*3+0, 0*3+1, 0*3+2\n",
+    "3, 4, 5, 3, 4, 5, 3, 4, 5 => 1*3+0, 1*3+1, 1*3+2, 1*3+0, 1*3+1, 1*3+2, 1*3+0, 1*3+1, 1*3+2\n",
+    "6, 7, 8, 6, 7, 8, 6, 7, 8 => 2*3+0, 2*3+1, 2*3+2, 2*3+0, 2*3+1, 2*3+2, 2*3+0, 2*3+1, 2*3+2\n",
+    "0, 1, 2, 0, 1, 2, 0, 1, 2 => 0*3+0, 0*3+1, 0*3+2, 0*3+0, 0*3+1, 0*3+2, 0*3+0, 0*3+1, 0*3+2\n",
+    "3, 4, 5, 3, 4, 5, 3, 4, 5 => 1*3+0, 1*3+1, 1*3+2, 1*3+0, 1*3+1, 1*3+2, 1*3+0, 1*3+1, 1*3+2\n",
+    "6, 7, 8, 6, 7, 8, 6, 7, 8 => 2*3+0, 2*3+1, 2*3+2, 2*3+0, 2*3+1, 2*3+2, 2*3+0, 2*3+1, 2*3+2\n",
+    "0, 1, 2, 0, 1, 2, 0, 1, 2 => 0*3+0, 0*3+1, 0*3+2, 0*3+0, 0*3+1, 0*3+2, 0*3+0, 0*3+1, 0*3+2\n",
+    "3, 4, 5, 3, 4, 5, 3, 4, 5 => 1*3+0, 1*3+1, 1*3+2, 1*3+0, 1*3+1, 1*3+2, 1*3+0, 1*3+1, 1*3+2\n",
+    "6, 7, 8, 6, 7, 8, 6, 7, 8 => 2*3+0, 2*3+1, 2*3+2, 2*3+0, 2*3+1, 2*3+2, 2*3+0, 2*3+1, 2*3+2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48039a06-043d-423e-ae10-49abc52934b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for j in range(9):\n",
+    "    a = j % 3\n",
+    "    for i in range(9):\n",
+    "        b = i % 3\n",
+    "        print(f'{a}*3+{b}', end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afb94ef5-46ee-436c-a578-121071f6170e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#x\n",
+    "0, 0, 0, 1, 1, 1, 2, 2, 2 => 0*3+0, 0*3+0, 0*3+0, 0*3+1, 0*3+1, 0*3+1, 0*3+2, 0*3+2, 0*3+2\n",
+    "0, 0, 0, 1, 1, 1, 2, 2, 2 => 0*3+0, 0*3+0, 0*3+0, 0*3+1, 0*3+1, 0*3+1, 0*3+2, 0*3+2, 0*3+2\n",
+    "0, 0, 0, 1, 1, 1, 2, 2, 2 => 0*3+0, 0*3+0, 0*3+0, 0*3+1, 0*3+1, 0*3+1, 0*3+2, 0*3+2, 0*3+2\n",
+    "3, 3, 3, 4, 4, 4, 5, 5, 5 => 1*3+0, 1*3+0, 1*3+0, 1*3+1, 1*3+1, 1*3+1, 1*3+2, 1*3+2, 1*3+2\n",
+    "3, 3, 3, 4, 4, 4, 5, 5, 5 => 1*3+0, 1*3+0, 1*3+0, 1*3+1, 1*3+1, 1*3+1, 1*3+2, 1*3+2, 1*3+2\n",
+    "3, 3, 3, 4, 4, 4, 5, 5, 5 => 1*3+0, 1*3+0, 1*3+0, 1*3+1, 1*3+1, 1*3+1, 1*3+2, 1*3+2, 1*3+2\n",
+    "6, 6, 6, 7, 7, 7, 8, 8, 8 => 2*3+0, 2*3+0, 2*3+0, 2*3+1, 2*3+1, 2*3+1, 2*3+2, 2*3+2, 2*3+2\n",
+    "6, 6, 6, 7, 7, 7, 8, 8, 8 => 2*3+0, 2*3+0, 2*3+0, 2*3+1, 2*3+1, 2*3+1, 2*3+2, 2*3+2, 2*3+2\n",
+    "6, 6, 6, 7, 7, 7, 8, 8, 8 => 2*3+0, 2*3+0, 2*3+0, 2*3+1, 2*3+1, 2*3+1, 2*3+2, 2*3+2, 2*3+2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0ec3b3d-f18c-4145-b8f3-11c6a5a8f7df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for j in range(9):\n",
+    "    a = j // 3\n",
+    "    for i in range(9):\n",
+    "        b = i // 3\n",
+    "        #a*3+b\n",
+    "        print(f'{a}*3+{b}', end =' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75888f7c-d36a-479d-ab1c-c89d2c66cf38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for j in range(9):\n",
+    "    for i in range(9):\n",
+    "        x = (j // 3) * 3 + i // 3\n",
+    "        y = (j % 3) * 3 + (i % 3)\n",
+    "        print(board[x][y], end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52c472a9-6814-47c3-a0df-71f9b380ea40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for j in range(9):\n",
+    "    under_test = []\n",
+    "    for i in range(9):\n",
+    "        x = (j // 3) * 3 + i // 3\n",
+    "        y = (j % 3) * 3 + (i % 3)\n",
+    "        under_test.append(board[x][y])\n",
+    "    print(under_test, check9(under_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1ec3db6-41da-4bfa-af90-11e67733910c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check block\n",
+    "for j in range(9):\n",
+    "    under_test = [board[(j // 3) * 3 + i // 3][(j % 3) * 3 + (i % 3)] for i in range(9)]\n",
+    "    print(under_test, check9(under_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "366911b8-4067-4d82-9c95-4f7aa6a3c038",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def valid81(board):\n",
+    "    def check9(under_test):\n",
+    "        flags = [False] * 10\n",
+    "        for n in under_test:\n",
+    "            if n != '.':\n",
+    "                d = int(n)\n",
+    "                if flags[d]:\n",
+    "                    return False\n",
+    "                else:\n",
+    "                    flags[d] = True\n",
+    "        return True\n",
+    "    \n",
+    "    for j in range(9):\n",
+    "        # row\n",
+    "        under_test = [board[j][i] for i in range(9)]\n",
+    "        if not check9(under_test):\n",
+    "            return False\n",
+    "\n",
+    "        # column\n",
+    "        under_test = [board[i][j] for i in range(9)]\n",
+    "        if not check9(under_test):\n",
+    "            return False\n",
+    "\n",
+    "        # block\n",
+    "        under_test = [board[(j // 3) * 3 + i // 3][(j % 3) * 3 + (i % 3)] for i in range(9)]\n",
+    "        if not check9(under_test):\n",
+    "            return False\n",
+    "\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc8e028f-5be2-4b26-b5e4-ab84e735dcf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "valid81(board)"
    ]
   },
   {
