--- a/Python程式設計/pydm-20250511-ans.ipynb
+++ b/Python程式設計/pydm-20250511-ans.ipynb
@@ -1573,6 +1573,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bc5a0b0-d06c-4bde-acbc-518850e31468",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('orders.csv', encoding='utf-8') as f:\n",
+    "    rows = f.readlines()[1:]  # in string\n",
+    "\n",
+    "orders = []\n",
+    "for r in rows:\n",
+    "    tmp = r.strip().split(',')\n",
+    "    q = int(tmp[-1])\n",
+    "    if q > 10000:\n",
+    "        orders.append(tmp[0])\n",
+    "print(orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "283cdbf3-b42e-4047-a3c0-9aed1c9337fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75ab74b6-6964-4db7-82c6-9e355a21ef72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('orders.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "659361f3-a3cd-4bcf-9016-59f3bc0ae18e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df['order_code'][df['quantity'] > 10000].to_list())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89534677-1049-4461-ac87-08edfd473d69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "19f92c35-6c03-485e-8eed-c84d8935e5f5",
    "metadata": {},
@@ -1647,6 +1706,83 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c964827f-a651-40b5-88e1-15917fe67489",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "\n",
+    "root = 'trees'\n",
+    "dset = os.listdir(root)\n",
+    "#f = open('output.csv', 'w', encoding='utf-8')\n",
+    "f=None\n",
+    "\n",
+    "# deside full categories\n",
+    "cats = set()\n",
+    "for d in dset:\n",
+    "    cats |= set(os.listdir(os.path.join(root, d)))\n",
+    "cats = sorted(cats)\n",
+    "print(','+','.join(cats), file=f)\n",
+    "\n",
+    "# count by dataset\n",
+    "for d in dset:\n",
+    "    if not os.path.isdir(os.path.join(root, d)):\n",
+    "        continue\n",
+    "\n",
+    "    nums = [] \n",
+    "    for c in cats:\n",
+    "        count = len(glob.glob(os.path.join(root, d, c, '*.[jJ][pP][gG]')))\n",
+    "        nums.append(count)\n",
+    "    print(d+','+','.join([str(i) for i in nums]), file=f)\n",
+    "\n",
+    "#f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "894fc24d-99f3-43ba-a130-666cbde2dfd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import glob\n",
+    "\n",
+    "def count(root, file=None):\n",
+    "    dset = os.listdir(root)\n",
+    "    if file:\n",
+    "        file = open(file, 'w', encoding='utf-8')\n",
+    "    \n",
+    "    # deside full categories\n",
+    "    cats = set()\n",
+    "    for d in dset:\n",
+    "        cats |= set(os.listdir(os.path.join(root, d)))\n",
+    "    cats = sorted(cats)\n",
+    "    print(','+','.join(cats), file=file)\n",
+    "    \n",
+    "    # count by dataset\n",
+    "    for d in dset:\n",
+    "        if not os.path.isdir(os.path.join(root, d)):\n",
+    "            continue\n",
+    "    \n",
+    "        nums = [] \n",
+    "        for c in cats:\n",
+    "            count = len(glob.glob(os.path.join(root, d, c, '*.[jJ][pP][gG]')))\n",
+    "            nums.append(count)\n",
+    "        print(d+','+','.join([str(i) for i in nums]), file=file)\n",
+    "    \n",
+    "    if file:\n",
+    "        file.close()\n",
+    "\n",
+    "root = 'trees'\n",
+    "count(root, 'hello.csv')\n",
+    "#count(root)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dccd25a6-9df9-49b4-b7be-abcffd36bc40",
    "metadata": {},
@@ -1702,6 +1838,129 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3700be7c-4287-4a4b-bb7b-8b31404d824e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new game\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "game = random.sample(range(10), k=4)\n",
+    "print(game)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4b1c672-96d5-462a-bf22-c33401cfbf50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# guess\n",
+    "guess = input('猜數字: ') \n",
+    "print(guess)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b26b2bbb-8953-4370-bffd-587aab9a0de0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check\n",
+    "guess = '8766'\n",
+    "\n",
+    "guess = guess.replace(' ', '')\n",
+    "if not guess.isdigit() or len(guess) != len(game) or len(guess) != len(set(guess)):\n",
+    "    print('input error')\n",
+    "\n",
+    "guess = [int(i) for i in guess]\n",
+    "print(guess)\n",
+    "\n",
+    "# judge\n",
+    "a = b = 0\n",
+    "for i in range(len(game)):\n",
+    "    if game[i] == guess[i]:\n",
+    "        a += 1\n",
+    "    elif game[i] in guess:\n",
+    "        b += 1\n",
+    "            \n",
+    "print(f'{a}A, {b}B')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ac6aa42-53df-4d89-a698-3ed60b7a296e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def new(digit=4):\n",
+    "    return random.sample(range(10), k=digit)\n",
+    "\n",
+    "def extract(guess: str) -> str | list:\n",
+    "    guess = guess.replace(' ', '')\n",
+    "    if not guess.isdigit():\n",
+    "        return 'alphabet included'\n",
+    "    if len(guess) != len(game):\n",
+    "        return 'length not match'\n",
+    "    if len(guess) != len(set(guess)):\n",
+    "        return 'duplicated digit'\n",
+    "    \n",
+    "    # if not guess.isdigit() or len(guess) != len(game) or len(guess) != len(set(guess)):\n",
+    "    #     return None\n",
+    "    return [int(i) for i in guess]\n",
+    "\n",
+    "def judge(game: list, guess: list) -> tuple:\n",
+    "    a = b = 0\n",
+    "    for i in range(len(game)):\n",
+    "        if game[i] == guess[i]:\n",
+    "            a += 1\n",
+    "        elif game[i] in guess:\n",
+    "            b += 1\n",
+    "\n",
+    "    return a, b\n",
+    "\n",
+    "judge([1, 2, 3, 4], [1, 6, 7, 8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15181f7d-1152-48b9-8516-84bf62646ae2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "game = new()\n",
+    "print(game)\n",
+    "win = False\n",
+    "\n",
+    "for i in range(10):\n",
+    "    guess = input(f'[run {i}] 猜數字: ')\n",
+    "    \n",
+    "    guess = extract(guess)\n",
+    "    if type(guess) == str:\n",
+    "        print(guess)\n",
+    "        continue\n",
+    "    \n",
+    "    a, b = judge(game, guess)\n",
+    "    print(f'{a}A, {b}B')\n",
+    "    if a == 4:\n",
+    "        print('you win')\n",
+    "        win = True\n",
+    "        break\n",
+    "\n",
+    "if not win:\n",
+    "    print('you lose')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4c7c1a80-4b90-4e3e-a022-f5e106769148",
    "metadata": {},
@@ -1734,10 +1993,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "746f33ac-4ffe-45f6-86d3-429990028c4d",
+   "execution_count": 1,
+   "id": "4f8182d4-7f99-48b9-a779-47cf0056dad3",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "class Dealer:\n",
+    "\n",
+    "    NUMBERS = ['2', 'A', 'K', 'Q', 'J', '10', '9', '8', '7', '6', '5', '4', '3']\n",
+    "    SUITES = ['SPADE', 'HEART', 'DIAMOND', 'CLUB']\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        __class__.standard = [(s, n) for n in __class__.NUMBERS for s in __class__.SUITES]\n",
+    "        self.cards = __class__.standard.copy()\n",
+    "        random.shuffle(self.cards)\n",
+    "\n",
+    "    def deal(self, n=2):\n",
+    "        if len(self.cards) >= n:\n",
+    "            cards = self.cards[:n]\n",
+    "            self.cards = self.cards[n:]\n",
+    "            return cards\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.cards)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f'i am a Dealer with {len(self)} cards'\n",
+    "\n",
+    "    def win(self, a, b):\n",
+    "        a_index = __class__.standard.index(a)\n",
+    "        b_index = __class__.standard.index(b)\n",
+    "        if a_index < b_index:\n",
+    "            return a\n",
+    "        if b_index < a_index:\n",
+    "            return b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "746f33ac-4ffe-45f6-86d3-429990028c4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('HEART', 'A') vs ('HEART', 'Q')\n",
+      "('HEART', 'A') win\n"
+     ]
+    }
+   ],
    "source": [
     "dealer = Dealer()\n",
     "a, b = dealer.deal(2)\n",
